homotopy-graphics/tests/snapshots/layout__assoc_projected.snap
---
source: homotopy-graphics/tests/layout.rs
expression: "Layout::new(assoc, 100).unwrap()"
---
{
  "positions": [
    [
      0.0,
      1.0,
      2.0,
      3.0,
      4.0
    ],
    [
      0.0,
      2.0,
      4.0
    ],
    [
      0.0,
      1.0,
      2.0,
      3.0,
      4.0
    ]
  ],
  "width": 4.0
}
