homotopy-graphics/tests/snapshots/layout__assoc_right.snap
---
source: homotopy-graphics/tests/layout.rs
expression: layout
---
{
  "positions": [
    [
      0.0,
      1.0,
      2.0,
      3.0,
      4.0,
      5.0,
      6.0
    ],
    [
      0.0,
      1.0,
      2.0,
      4.0,
      6.0
    ],
    [
      0.0,
      1.0,
      2.0,
      4.0,
      6.0
    ],
    [
      0.0,
      2.5,
      6.0
    ],
    [
      0.0,
      2.5,
      6.0
    ]
  ],
  "width": 6.0
}
