homotopy-graphics/tests/snapshots/layout__scalar.snap
---
source: homotopy-graphics/tests/layout.rs
expression: "Layout::new(s, 100).unwrap()"
---
{
  "positions": [
    [
      1.0
    ],
    [
      0.0,
      1.0,
      2.0
    ],
    [
      1.0
    ]
  ],
  "width": 2.0
}
